[gd_scene load_steps=2 format=3 uid="uid://bpg2lcg0737in"]

[ext_resource type="Script" path="res://structure_handler.gd" id="1_sjf38"]

[node name="structure_handler" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sjf38")
metadata/activeTilemap = NodePath("")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="topSpacer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="buttonHolder" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/buttonHolder"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/buttonHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="structureBut1" type="Button" parent="VBoxContainer/buttonHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
text = "Structure 1"

[node name="structureBut2" type="Button" parent="VBoxContainer/buttonHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
text = "Structure 2"

[node name="structureBut3" type="Button" parent="VBoxContainer/buttonHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
action_mode = 0
text = "Structure 3"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/buttonHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[connection signal="pressed" from="VBoxContainer/buttonHolder/HBoxContainer/structureBut1" to="." method="onButtonPressed" binds= [1]]
[connection signal="pressed" from="VBoxContainer/buttonHolder/HBoxContainer/structureBut2" to="." method="onButtonPressed" binds= [2]]
[connection signal="pressed" from="VBoxContainer/buttonHolder/HBoxContainer/structureBut3" to="." method="onButtonPressed" binds= [3]]
